--- a/GuañaRobertoProgreso1/GuañaRobertoProgreso1.csproj
+++ b/GuañaRobertoProgreso1/GuañaRobertoProgreso1.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Guaña\" />
+  </ItemGroup>
+
 </Project>
